--- a/public/admin/categories.html
+++ b/public/admin/categories.html
@@ -1,5 +1,16 @@
+<script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        // 表示没有登录
+        location.href = 'login.html';        
+    }
+    // console.log(isLogin);    
+</script>
+
+
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Categories &laquo; Admin</title>
@@ -9,6 +20,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -30,18 +42,19 @@
       </div> -->
       <div class="row">
         <div class="col-md-4">
-          <form>
+          <form id="cForm">
             <h2>添加分类</h2>
             <div class="form-group">
               <label>名称</label>
-              <input class="form-control" type="text" placeholder="请输入分类名称">
+              <input class="form-control" type="text" placeholder="请输入分类名称" name="title" id="title">
             </div>
             <div class="form-group">
               <label>图标</label>
-              <input class="form-control" type="text" placeholder="请输入分类图标类名">
+              <input class="form-control" type="text" placeholder="请输入分类图标类名" name="className" id="className">
             </div>
             <div class="form-group">
-              <button class="btn btn-primary" type="submit">添加</button>
+              <button class="btn btn-primary" type="button" id="cAdd">添加</button>
+              <button class="btn btn-primary" type="button" id="cEdit" style="display: none">修改</button>
             </div>
           </form>
         </div>
@@ -54,11 +67,12 @@
               <tr>
                 <th class="text-center" width="40"><input type="checkbox"></th>
                 <th>名称</th>
+                <th>字体图标</th>
                 <th class="text-center" width="100">操作</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <!-- <tr>
                 <td class="text-center"><input type="checkbox"></td>
                 <td>奇趣事</td>
                 <td class="text-center">
@@ -81,7 +95,7 @@
                   <a href="javascript:;" class="btn btn-info btn-xs">编辑</a>
                   <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
         </div>
@@ -127,6 +141,27 @@
   </div>
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+
+  <script src="../assets/js/categories.js"></script>
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+
+  <script type="text/html" id="cTpl">
+    {{each list}}
+    <tr>
+      <td class="text-center"><input type="checkbox"></td>
+      <td>{{$value.title}}</td>
+      <td>{{$value.className}}</td>
+      <td class="text-center" data-id="{{@$value._id}}">
+        <a href="javascript:;" class="btn btn-info btn-xs edit">编辑</a>
+        <a href="javascript:;" class="btn btn-danger btn-xs del">删除</a>
+      </td>
+    </tr>
+
+    {{/each}}
+  
+  </script>
+
   <script>NProgress.done()</script>
 </body>
+
 </html>
