--- a/public/admin/users.html
+++ b/public/admin/users.html
@@ -2,11 +2,9 @@
 <script>
     if (!isLogin) {
         // 表示没有登录
-        location.href = 'login.html';
-        
+        location.href = 'login.html';        
     }
-    // console.log(isLogin);
-    
+    // console.log(isLogin);    
 </script>
 
 
@@ -212,7 +210,7 @@
                 <td>{{$value.role == 'admin' ? '超级管理员' : '普通用户'}}</td>
                 <td class="text-center" data-id="{{@$value._id}}">
                   <a href="javascript:;" class="btn btn-default btn-xs edit">编辑</a>
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+                  <a href="javascript:;" class="btn btn-danger btn-xs del">删除</a>
                 </td>
               </tr>
 
