第二天文章添加和显示功能完善

--- a/public/admin/post-add.html
+++ b/public/admin/post-add.html
@@ -1,3 +1,13 @@
+<script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        // 表示没有登录
+        location.href = 'login.html';        
+    }
+    // console.log(isLogin);    
+</script>
+
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
