--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -1,5 +1,16 @@
+<!-- <script src="/login/status"></script>
+<script>
+    if (!isLogin) {
+        // 表示没有登录
+        location.href = 'login.html';        
+    }
+    // console.log(isLogin);    
+</script> -->
+
+
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Posts &laquo; Admin</title>
@@ -9,6 +20,7 @@
   <link rel="stylesheet" href="../assets/css/admin.css">
   <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
   <script>NProgress.start()</script>
 
@@ -59,7 +71,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <!-- <tr>
             <td>随便一个名称</td>
             <td>小小</td>
             <td>潮科技</td>
@@ -91,7 +103,7 @@
               <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
               <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
             </td>
-          </tr>
+          </tr> -->
         </tbody>
       </table>
     </div>
@@ -136,6 +148,30 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
+
+  <!-- 引入 模板引擎文件 和自己对应的js文件 -->
+  <script src="../assets/vendors/art-template/template-web.js"></script>
+  <script src="../assets/js/posts.js"></script>
+
+
+
+  <script type="text/html" id="pTpl">
+    {{each records}}
+    <tr>
+        <td>{{$value.title}}</td>
+        <td>{{$value.author.nickName}}</td>
+        <td>{{$value.category.title}}</td>
+        <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
+        <td class="text-center">{{$value.state == 0 ? '草稿' : '已发布'}}</td>
+        <td class="text-center">
+          <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
+          <a href="javascript:;" class="btn btn-danger btn-xs del">删除</a>
+        </td>
+      </tr>
+      {{/each}}
+  </script>
+
   <script>NProgress.done()</script>
 </body>
+
 </html>
