--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -1,11 +1,11 @@
-<!-- <script src="/login/status"></script>
+<script src="/login/status"></script>
 <script>
     if (!isLogin) {
         // 表示没有登录
         location.href = 'login.html';        
     }
     // console.log(isLogin);    
-</script> -->
+</script>
 
 
 <!DOCTYPE html>
@@ -41,22 +41,18 @@
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
         <form class="form-inline">
-          <select name="" class="form-control input-sm">
-            <option value="">所有分类</option>
+          <select name="category" class="form-control input-sm" id="category">
+            <option value="all">所有分类</option>
           </select>
-          <select name="" class="form-control input-sm">
-            <option value="">所有状态</option>
-            <option value="">草稿</option>
-            <option value="">已发布</option>
+          <select name="state" class="form-control input-sm" id="s">
+            <option value="all">所有状态</option>
+            <option value="0">草稿</option>
+            <option value="1">已发布</option>
           </select>
-          <button class="btn btn-default btn-sm">筛选</button>
+          <button class="btn btn-default btn-sm" type="button" id="cSearch">筛选</button>
         </form>
         <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -71,39 +67,7 @@
           </tr>
         </thead>
         <tbody>
-          <!-- <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>随便一个名称</td>
-            <td>小小</td>
-            <td>潮科技</td>
-            <td class="text-center">2016/10/07</td>
-            <td class="text-center">已发布</td>
-            <td class="text-center">
-              <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr> -->
+
         </tbody>
       </table>
     </div>
@@ -148,12 +112,8 @@
 
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
-
-  <!-- 引入 模板引擎文件 和自己对应的js文件 -->
   <script src="../assets/vendors/art-template/template-web.js"></script>
   <script src="../assets/js/posts.js"></script>
-
-
 
   <script type="text/html" id="pTpl">
     {{each records}}
@@ -163,14 +123,30 @@
         <td>{{$value.category.title}}</td>
         <td class="text-center">{{$imports.formateDate($value.createAt)}}</td>
         <td class="text-center">{{$value.state == 0 ? '草稿' : '已发布'}}</td>
-        <td class="text-center">
-          <a href="javascript:;" class="btn btn-default btn-xs">编辑</a>
+        <td class="text-center" data-id="{{@$value._id}}">
+          <a href="post-add.html?id={{@$value._id}}" class="btn btn-default btn-xs edit">编辑</a>
           <a href="javascript:;" class="btn btn-danger btn-xs del">删除</a>
         </td>
       </tr>
       {{/each}}
   </script>
+  <script type="text/html" id="pageTpl">
+      {{ if page !== 1}}
+      <li> <a href="javascript:;" onclick="pageChange({{page-1}})" >上一页</a></li>
+      {{/if}}
+      {{each display}}
+      <li class="{{$value == page ? 'active' : ''}}"> <a href="javascript:;" onclick="pageChange({{$value}})" >{{$value}}</a></li>
+      {{/each}}
+      {{if page < pages}}
+      <li> <a href="javascript:;" onclick="pageChange({{page-0+1}})" >下一页</a></li>
+      {{/if}}
 
+  </script>
+  <script type="text/html" id="categoryTpl">
+    {{each data}}
+    <option value="{{@$value._id}}">{{$value.title}}</option>
+    {{/each}}
+  </script>
   <script>NProgress.done()</script>
 </body>
 
