--- a/public/detail.html
+++ b/public/detail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,23 +8,24 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/vendors/font-awesome/css/font-awesome.css">
 </head>
+
 <body>
   <div class="wrapper">
     <div class="topnav">
-      <ul>
-        <li><a href="javascript:;"><i class="fa fa-glass"></i>奇趣事</a></li>
+      <ul class="publicNav">
+        <!-- <li><a href="javascript:;"><i class="fa fa-glass"></i>奇趣事</a></li>
         <li><a href="javascript:;"><i class="fa fa-phone"></i>潮科技</a></li>
         <li><a href="javascript:;"><i class="fa fa-fire"></i>会生活</a></li>
-        <li><a href="javascript:;"><i class="fa fa-gift"></i>美奇迹</a></li>
+        <li><a href="javascript:;"><i class="fa fa-gift"></i>美奇迹</a></li> -->
       </ul>
     </div>
     <div class="header">
       <h1 class="logo"><a href="index.html"><img src="assets/img/logo.png" alt=""></a></h1>
-      <ul class="nav">
-        <li><a href="javascript:;"><i class="fa fa-glass"></i>奇趣事</a></li>
+      <ul class="nav publicNav">
+        <!-- <li><a href="javascript:;"><i class="fa fa-glass"></i>奇趣事</a></li>
         <li><a href="javascript:;"><i class="fa fa-phone"></i>潮科技</a></li>
         <li><a href="javascript:;"><i class="fa fa-fire"></i>会生活</a></li>
-        <li><a href="javascript:;"><i class="fa fa-gift"></i>美奇迹</a></li>
+        <li><a href="javascript:;"><i class="fa fa-gift"></i>美奇迹</a></li> -->
       </ul>
       <div class="search">
         <form>
@@ -178,7 +180,7 @@
     </div>
     <div class="content">
       <div class="article">
-        <div class="breadcrumb">
+        <!-- <div class="breadcrumb">
           <dl>
             <dt>当前位置：</dt>
             <dd><a href="javascript:;">奇趣事</a></dd>
@@ -193,35 +195,12 @@
           <span>分类: <a href="javascript:;">奇趣事</a></span>
           <span>阅读: (2421)</span>
           <span>评论: (143)</span>
-        </div>
+        </div> -->
       </div>
       <div class="panel hots">
         <h3>热门推荐</h3>
-        <ul>
-          <li>
-            <a href="javascript:;">
-              <img src="uploads/hots_2.jpg" alt="">
-              <span>星球大战:原力觉醒视频演示 电影票68</span>
-            </a>
-          </li>
-          <li>
-            <a href="javascript:;">
-              <img src="uploads/hots_3.jpg" alt="">
-              <span>你敢骑吗？全球第一辆全功能3D打印摩托车亮相</span>
-            </a>
-          </li>
-          <li>
-            <a href="javascript:;">
-              <img src="uploads/hots_4.jpg" alt="">
-              <span>又现酒窝夹笔盖新技能 城里人是不让人活了！</span>
-            </a>
-          </li>
-          <li>
-            <a href="javascript:;">
-              <img src="uploads/hots_5.jpg" alt="">
-              <span>实在太邪恶！照亮妹纸绝对领域与私处</span>
-            </a>
-          </li>
+        <ul id="recommendBox">
+
         </ul>
       </div>
     </div>
@@ -229,5 +208,34 @@
       <p>© 2016 XIU主题演示 本站主题由 themebetter 提供</p>
     </div>
   </div>
+  <script src="assets/vendors/jquery/jquery.min.js"></script>
+  <script src="assets/vendors/art-template/template-web.js"></script>
+  <script src="assets/js/recommend.js"></script>
+  <script src="assets/js/public.js"></script>
+  <script src="assets/js/detail.js"></script>
+
+  <script type="text/template" id="detailTpl">
+    <div class="breadcrumb">
+      <dl>
+        <dt>当前位置：</dt>
+        <dd><a href="javascript:;">{{data.category.title}}</a></dd>
+        <dd>{{data.title}}</dd>
+      </dl>
+    </div>
+    <h2 class="title">
+      <a href="javascript:;">{{data.content}}</a>
+    </h2>
+    <div class="meta">
+      <span>{{data.author.nickName}} 发布于 {{data.createAt && data.createAt.substr(0, 10)}}</span>
+      <span>分类: <a href="javascript:;">{{data.category.title}}</a></span>
+      <span>阅读: ({{data.meta.views}})</span>
+      <span>评论: ({{data.meta.comments}})</span>
+    </div>
+
+  
+  </script>
+
+
 </body>
+
 </html>
